--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ theme = "hugo-lithium"
 googleAnalytics = ""
 disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
-publishdir = "../docs"
+publishdir = "docs"
 [permalinks]
     post = "/:year/:month/:day/:slug/"
 
