--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 publishDir = "docs"
 relativeURLs = true
-
+baseURL = "/"
 [permalinks]
     post = "/:year/:month/:day/:slug/"
 
