Open external links (e.g. github solutions) in new tabs

--- a/config.toml
+++ b/config.toml
@@ -42,4 +42,5 @@ pygmentsCodeFences = true
     disableInlineCopyToClipBoard = true
     editURL = "https://github.com/UoMResearchIT/RSE18-shiny-workshop/edit/master/content/"
 
-
+[blackfriday] 
+    hrefTargetBlank = true
