--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ publishDir = "docs"
 relativeURLs = true
 baseURL = "/"
 pygmentsCodeFences = true
+pygmentsStyle = "native"
 
 [[menu.shortcuts]]
     name = "Home"
@@ -33,7 +34,7 @@ pygmentsCodeFences = true
     highlightjsCDN = "//cdn.bootcss.com"
     highlightjsLang = ["r", "yaml"]
     highlightjsTheme = "github"
-
+    
     MathJaxCDN = "//cdn.bootcss.com"
     MathJaxVersion = "2.7.1"
     
