--- a/config.toml
+++ b/config.toml
@@ -17,11 +17,14 @@ pygmentsStyle = "native"
     name = "About"
     url = "/about/"
 [[menu.shortcuts]]
+    name = "Download materials"
+    url = "https://github.com/UoMResearchIT/r-shiny-course/raw/master/runningExample.zip"
+[[menu.shortcuts]]
     name = "Slides"
     url = "/slides/"
 [[menu.shortcuts]]
-    name = "GitHub"
-    url = "https://github.com/uomresearchit/r-shiny-course/"
+    name = "GitHub materials"
+    url = "https://github.com/uomresearchit/r-shiny-course-materials/"
 [[menu.shortcuts]]
     name = "Twitter"
     url = "https://twitter.com/davemawdsley"
